fixed ff word-wrap bug, portrait pointer on div, data types for comp properties

--- a/src/app/_common/modal/portrait/portrait.component.scss
+++ b/src/app/_common/modal/portrait/portrait.component.scss
@@ -56,20 +56,17 @@
     padding: 30px 30px 0 0;
   }
 
-  h1 {
-    position: relative;
-
-    .pointer {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: -200%;
-      animation: pointer 2s infinite;
-    }
-  }
-
   .description {
     margin-top: 30px;
+  }
+
+  .pointer {
+    display: none;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    font-size: 2rem;
+    animation: pointer 2s infinite;
   }
 }
 
@@ -77,8 +74,8 @@
   width: 40px;
   height: 40px;
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 20px;
+  right: 20px;
   background: $orange;
   color: #fff;
   border-radius: 30px;
@@ -133,8 +130,12 @@
     }
 
     h1 {
+      white-space: pre-wrap;
+      word-break: break-all;
       word-wrap: break-word;
-      hyphens: auto;
+      -webkit-hyphens: auto;
+         -moz-hyphens: auto;
+              hyphens: auto;
     }
   }
 
@@ -155,10 +156,10 @@
 
     h1 {
       clear: both;
+    }
 
-      .pointer {
-        display: block;
-      }
+    .pointer {
+      display: block;
     }
   }
 
@@ -174,11 +175,9 @@
       }
     }
 
-    h1 {
-      .pointer {
-        top: -600%;
-        right: 20px;
-      }
+    .pointer {
+      top: -600%;
+      right: 20px;
     }
   }
 
