--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -14,7 +14,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   position: relative;
-  padding: 0 15px;
+  // padding: 0 15px;
 }
 
 header {
@@ -22,7 +22,6 @@ header {
 
   h1,
   .intro {
-    // width: calc(50% - 30px);
     margin-left: 15px;
     margin-right: 15px;
   }
@@ -113,18 +112,11 @@ aside {
 
 @media screen and (max-width: 900px) {
 
-  main {
-    padding: 0 10px;
-  }
+  // main {
+  //   padding: 0 10px;
+  // }
 
   header {
-    // margin-bottom: 10px;
-
-    h1 {
-      // text-align: left;
-      // font-size: 3rem;
-    }
-
     h1,
     .intro {
       margin-left: 10px;
@@ -145,9 +137,9 @@ aside {
 
 @media screen and (max-width: 600px) {
 
-  main {
-    padding: 0 5px;
-  }
+  // main {
+  //   padding: 0 5px;
+  // }
 
   header {
     h1,
